# purdue_lunabotics

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  amdgpu-install_6.4.60401-1_all.deb  bag1auto_odom.csv  behavior.py  build.sh  change_log.txt  contributing.md  docker-setup.md  frames.gv  install-non-ros-deps.sh  install.sh  jetson_setup.md  package.xml  poses.csv  python_launch.md  python_node.md  readme.md  run.sh  running_the_robot.md  standards.md  test_realsense.sh  test_sensors.csv  testingBranch.txt  xml_launch.md
lunabot_bringup/: CMakeLists.txt  README.md  package.xml
lunabot_bringup/config/: plotjuggler_config.xml  sensors.yml  topics.yaml
lunabot_bringup/launch/: autonomy.launch  back_cam.launch  box_cam.launch  computer.launch  computer_slam.launch  costmap.launch  costmap.launch.py  data_collection.launch  dummybot.launch  example.launch  hang_cam.launch  nimbro.launch  overhead.launch  play_bag.launch  record.launch  record_small.launch  robot.launch  robot.launch.xml  rollerbot.launch  ros_ip_setup.sh  sim.launch  sim.launch.xml  sim_main_robot.launch  sim_mini_robot.launch  slam.launch  slam_record.launch  teensy.launch  test_localization.launch  test_mapping.launch  topleft_cam.launch  view_tf.launch
lunabot_bringup/rviz/: tf.rviz
lunabot_bringup/scripts/: run_analysis.py
lunabot_bt/: CMakeLists.txt  package.xml
lunabot_bt/config/: beacons.yml
lunabot_bt/launch/: beacon_scan.launch  scan.launch  test_scan.launch
lunabot_bt/src/: filter.cpp  scan_node.cpp
lunabot_control/: CMakeLists.txt  package.xml  readme.md  setup.cfg  setup.py
lunabot_control/firmware/: CMakeLists.txt
lunabot_control/include/: fsm.h
lunabot_control/launch/: control.launch  manual_control.launch
lunabot_control/nodes/: diff_drive_node.cpp  exdep_server.cpp  manual_controller
lunabot_control/scripts/: carnival_controller.py  clamp_output.py  differential_drive_controller.py  effort_factory.py  excavation_controller.py  homing_controller.py  manual_controller.py  manual_controller_autonomy.py  p2p_simplify_path_gui.py  pid_controller.py  point_to_point.py  point_to_point_controller.py  pure_pursuit_controller.py  slip_controller.py  stall_detector.py  test_mpc.py
lunabot_control/src/: .homing_controller.py.swp  current-feedback.md  manual_controller  mpc.cpp  mpc_node.cpp  purePursuitController.py  pure_pursuit_controller.py  readme.md  slipController.py
lunabot_embedded/: CMakeCache.txt  CMakeLists.txt  package.xml  readme.md
lunabot_embedded/firmware/: setup_flash_tools.sh  setup_teensy_toolchain.sh  update_board_manager.py
lunabot_embedded/src/: RobotMsgs.pb.c  RobotMsgs.pb.h  hid.c  hid.h  listener.cpp  pb.h  pb_common.c  pb_common.h  pb_decode.c  pb_decode.h  pb_encode.c  pb_encode.h  rawhid_test.c  talker.cpp  teensy_driver_node.cpp  test_pb.cpp
lunabot_filtering/: CMakeLists.txt  package.xml
lunabot_filtering/launch/: tune_rssi_filter.launch
lunabot_filtering/src/: rssi_filter_node.cpp
lunabot_localization/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  CMakeLists.txt  package.xml  readme.md
lunabot_localization/launch/: .localization.launch.swp  bt_scan.launch  bt_test.launch  localization.launch  sensors_tf.launch
lunabot_localization/src/: ROSwrapper.cpp  base_pose_manager  base_pose_manager.cpp  base_pose_manager_node  bluetooth_manage.cpp  bt_localization.cpp  bt_localization_node.cpp  bt_manager.cpp  bt_scanner_node  bt_test.cpp  bt_utils.py  laterate.cpp  manager.cpp
lunabot_msgs/: CMakeLists.txt  package.xml
lunabot_msgs/action/: Behavior.action  ExDep.action  Navigate.action  Rotate.action
lunabot_msgs/msg/: Actuation.msg  BeaconScan.msg  BeaconScanArray.msg  Behavior.msg  Drivetrain.msg  ExcavationState.msg  LunabotState.msg  RobotCmd.msg  RobotEffort.msg  RobotErrors.msg  RobotSensors.msg  RobotState.msg  behavior.msg  readme.md
lunabot_nav/: CMakeLists.txt  dijkstra_planner.xml  mpc.py  package.xml  readme.md  setup.py
lunabot_nav/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap.yml  octomap.yml
lunabot_nav/launch/: ekf.launch  global_planner.launch  lidar.launch  mapping.launch  move_base.launch  nav.launch  octomap.launch  pointcloud.launch  robot_configuration.launch  simulation.launch  testing.launch
lunabot_nav/maps/: 2-6-map.pgm  2-6-map.yaml  map.txt
lunabot_nav/nodes/: costmap_node.cpp  dstar_ros.py  dstar_ros8.py  dstar_ros_script  global_planner_node  mpc_node.cpp
lunabot_nav/params/: ekf.yaml
lunabot_nav/scripts/: dstar_node.py  fake_paths.py  global_planner_node.py
lunabot_nav/src/: collision_checker.py  conversions.py  costmap_node.cpp  dijkstra.cpp  dstar.cpp  dstar.hpp  dstar_node.cpp  global_path_planner.py  mpc.cpp  mpc.h  mpc.py  mpc_node  nav2_bridge.cpp  obstacle_detector  obstacle_grid  path_follower  path_follower.py  path_generator  path_generator.py  simulate_mpc.py  test.py  test2.py  test_mpc  test_node  test_path
lunabot_nav/test/: mpc_test.py  test_global_planner.test  test_global_planner_node  test_rrtstar.py
lunabot_perception/: CMakeLists.txt  package.xml  setup.py
lunabot_perception/launch/: apriltag.launch  apriltag.launch.xml  back.launch  cameras.launch  cameras.launch.save  d435.launch  extracams.launch  front.launch  left.launch  lidar.launch  mini_sim_cameras.launch  sensors_dummybot.launch  sensors_tf.launch  sim_cameras.launch  sim_cameras.launch.xml  t265.launch
lunabot_perception/script/: UWB_localization_node.py
lunabot_perception/scripts/: apriltag_node.py  log_internet.py  pc_generation_node.py  uwb_localization_node.py
lunabot_perception/src/: costmap_node.cpp  imu.cpp  imu_node.cpp  points_concat.cpp  scan_to_pc.cpp
lunabot_perception/test/: UWB_trilat_test.py
lunabot_planning/: CMakeLists.txt  package.xml
lunabot_sim/: CMakeLists.txt  README.md  package.xml  readme.md
lunabot_slam/: CMakeLists.txt  package.xml
lunabotics_21/: CMakeLists.txt  package.xml
lunabotics_gazebo_plugins/: CMakeLists.txt  package.xml
lunabotics_robot/: CMakeLists.txt  package.xml
(+488 files in other folders)
