<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lunabot_bringup</name>
  <version>0.0.0</version>
  <description>Lunabotics launch files</description>
  <maintainer email="lunabotics@todo.todo">Purdue Lunabotics</maintainer>
  <license>None</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Used for launch files -->
  <exec_depend>ros2launch</exec_depend> 


  <depend>rtabmap_ros</depend>
  <depend>rtabmap_launch</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>rviz2</depend>

  <depend>lunabot_control</depend>
  <depend>lunabot_sim</depend>
  <depend>lunabot_nav</depend>
  <depend>lunabot_perception</depend>
  <depend>lunabot_config</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
