<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lunabot_control</name>
  <version>0.0.0</version>
  <description>Controllers for lunabotics</description>
  <maintainer email="lunabotics@todo.todo">Purdue Lunabotics</maintainer>
  <license>None</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>plotjuggler</depend>
  <depend>plotjuggler_ros</depend>
  <depend>nav_msgs</depend>
  <depend>joy</depend>
  <depend>tf_transformations</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>