<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lunabot_msgs</name>
  <version>0.0.0</version>
  <description>Lunabotics custom messages</description>
  <maintainer email="lunabotics@todo.todo">Purude Lunabotics</maintainer>
  <license>None</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for building messages -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Custom dependencies -->
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
