<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>lunabot_nav</name>
  <version>0.0.0</version>
  <description>Lunabotics nav files</description>
  <maintainer email="lunabotics@todo.todo">Purdue Lunabotics</maintainer>
  <license>None</license>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>map_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
