<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lunabot_perception</name>
  <version>0.0.0</version>
  <description>Perception and sensing for lunabotics</description>
  <maintainer email="purduelunaboticsteam@gmail.com">Purude Lunabotics</maintainer>
  <license>None</license>

  <depend>image_proc</depend>
  <depend>realsense2_camera</depend>
  <depend>apriltag_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
