<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lunabot_perception</name>
  <version>0.0.0</version>
  <description>Lunabotics launch files</description>
  <maintainer email="lunabotics@todo.todo">Purdue Lunabotics</maintainer>
  <license>None</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>image_proc</depend>
  <depend>rtabmap_util</depend>
  <depend>apriltag_ros</depend>

  <!-- Used for launch files -->
  <exec_depend>ros2launch</exec_depend> 

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
