<?xml version="1.0"?>
<package format="2">
  <name>lunabotics_21</name>
  <version>0.0.0</version>
  <description>The purdue_lunabotics_ros package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="raghavauppuluri@todo.todo">raghavauppuluri</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>lunabotics_robot</exec_depend>
  <exec_depend>lunabotics_sim_v1_description</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
	<metapackage/>
  </export>
</package>
